package it.diem.unisa.musicmanager.controller;

import javafx.event.ActionEvent;

public class PlayerController {
    public void handlePlayPause(ActionEvent actionEvent) {
    }

    public void handleNext(ActionEvent actionEvent) {
    }

    public void handleSkipPlaylist(ActionEvent actionEvent) {
    }

    public void handleChangeMode(ActionEvent actionEvent) {
    }

    public void handleQueue(ActionEvent actionEvent) {
    }
}
