package it.diem.unisa.musicmanager.controller;

import javafx.event.ActionEvent;

public class PlaylistCardController {
    public void handlePlay(ActionEvent actionEvent) {
    }

    public void handleMenu(ActionEvent actionEvent) {
    }
}
