package it.diem.unisa.musicmanager.dao;

public interface PlaylistDAO {
}
